MODDCB-208: fix cql query for querying patron group by name